// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query Query 1`] = `
QueryNode {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "parentArgs": undefined,
    "resolve": [Function],
  },
  "args": Object {},
  "resolve": [Function],
}
`;

exports[`query QueryWithConnection 1`] = `
QueryConnection {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "node": "Int",
    "parentArgs": undefined,
    "resolve": [Function],
    "type": "[Int]",
  },
  "args": Object {
    "after": Object {
      "type": "String",
    },
    "first": Object {
      "type": "Int",
    },
    "offset": Object {
      "type": "Int",
    },
  },
  "resolve": [Function],
  "type": "[Int]",
}
`;

exports[`query QueryWithNode 1`] = `
QueryNode {
  "_": Object {
    "afterware": Array [],
    "middleware": Array [],
    "parentArgs": Object {
      "id": PayloadField {
        "resolveValue": [Function],
      },
    },
    "resolve": [Function],
  },
  "args": Object {},
  "fieldName": undefined,
  "resolve": [Function],
  "type": "Int",
}
`;
